apk/iknite.d/argocd/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: apisix
    cert-manager.io/cluster-issuer: letsencrypt-openance
    external-dns.alpha.kubernetes.io/ttl: "60"
    ingress.kubernetes.io/auth-secret: argo-sso
  labels: {}
  name: argo
  namespace: argocd
spec:
  rules:
  - host: citest-gitops.openance.dev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argocd-server
            port:
              number: 80
  tls:
  - hosts:
    - citest-gitops.openance.dev
    secretName: star-openance-dev-tls
